--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,11 @@ html {
 }
 
 
- .nombre-sitio span {
+.nobmre-sitio {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+ .nobmre-sitio span {
      color: #037bc0;
  }
 
@@ -24,5 +28,10 @@ html {
      background-color: rgb(224, 102, 163);
      width: 200px;
      padding: 25px;
-     box-sizing: content-box;
- }
+}
+
+.sobre-empresa {
+    background-color: blue;
+    width: 500px;
+    padding: 100px;
+}
