--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,16 +14,57 @@ html {
 *, *::before, *::after {
     box-sizing: inherit;
 }
+/* Globales */
 
+a {
+    text-decoration: none;
+    color: #000;
+}
 
+.contenedor-navegacion {
+    border-top: 1px solid #e1e1e1;
+}
+.contenedor {
+    max-width: 1200px;
+    /* margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto; */
+    /* margin: 0 auto; */ /* Lo comentado es igual a lo siguiente */
+    margin-inline: auto;
+
+}
+
+/* Header y Navegación */
 .nobmre-sitio {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    margin-top: 50px;
+    margin-top: 50px;
+    text-align: center;
 }
  .nobmre-sitio span {
      color: #037bc0;
  }
 
+ .nav-principal {
+     /* border-color: #e1e1e1;
+     border-top-style: solid;
+     /* border-width: 1px; */   /* Esto es lo mismo que la línea de abajo */
+     /* border-top: 1px solid #e1e1e1; */
+
+     /* padding-top: 20px;
+     padding-bottom: 20px; */   /* Lo mismo con la siguiente línea*/
+     padding: 20px 0;
+ }
+
+ .hero {
+     background-image: url(../img/principal.jpg);
+     background-repeat: no-repeat;
+     background-size: cover;
+     height: 700px;
+     
+ }
+
+ /* Box Model */
  .sobre-nosotros {
      background-color: rgb(224, 102, 163);
      width: 200px;
