--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,41 @@
-/* Estilos o Normas a la hora de crear CSS: Módulos, BEM, SMACS */
+/* Estilos CSS: Módulos, BEM, SMACSS */
+/* Formas de escribir código CSS: Módulos, BEM, Utilidades, SMACSS */
+/* Siempre se recomienda utilizar uno, máximo dos de éstos enfoques. */
+
+/* BEM - Block Element Modifier */
+/* .car {}   // Este el nombre del bloque
+   .card__titulo {} // Luego del doble guión bajo, es el nombre del elemento.
+   .card__imagen {}
+   .card__boton {}
+   .card__boton--activo {}  // Luego del doble guión medio es el nombe del modificacor.
+*/
+
+/* Ejemplo Utilidades */
+/* .text-center {}  // Estas utilidades se las trabaja mucho en Tailwind.
+   .color-red-100 {}
+   .bg-blue-200 {}
+   .p-2 {}
+   .m-2 {}
+*/
+
+/* Ejemplo Módulos CSS */
+/* .card {}
+   .card h2 {}
+   .card img {}
+   .card a {}
+ */
+
+ /* Ejemplo SMACSS (no se suele utilizar mucho) */
+ /* #header, #article, #footer {    //Básicamente se agrupa por elementos y se comparten sus propiedades.
+     width: 960px;
+     marging: auto;
+    } 
+    
+    #article {      //Si llegara a cambiar se lo agrega en otra línea. 
+        border: solid #CCC;     //El resto de las propiedades las comparte con header y footer, excepto en este caso el border.
+        border-width: 1px 0 0;
+    }
+*/
 
 /* Especificidad en CSS
     0 0 0 2 => Etiqueta, es el selector más débil.
@@ -10,16 +47,22 @@
 /* Sniped de Paul Irish para aplicar Border-sizing a todos los elementos*/
 html {
     box-sizing: border-box;
+    font-size: 62.5%; /* Con este hack tenememos 1REM = 10px */
 }
 *, *::before, *::after {
     box-sizing: inherit;
 }
 body {
     font-family: 'Raleway', sans-serif;
+    font-size: 1.6rem;
 }
 /* Globales */
 h1, h2, h3 {
     font-family: 'Playfair Display', serif;
+}
+
+h3 {
+    font-family: 3rem;
 }
 
 a {
@@ -27,11 +70,8 @@ a {
     color: #000;
 }
 
-.contenedor-navegacion {
-    border-top: 1px solid #e1e1e1;
-}
 .contenedor {
-    max-width: 1200px;
+    max-width: 120rem;
     /* margin-top: 0;
     margin-right: auto;
     margin-bottom: 0;
@@ -42,19 +82,24 @@ a {
 }
 
 img {
-    max-width: 100%;
+    max-width: 100%; /* Esto es relativo al elemento padre, en este caso un div o el mismo body */
     display: block;
 }
 
 /* Header y Navegación */
 .nobmre-sitio {
-    margin-top: 50px;
-    margin-top: 50px;
+    margin-top: 5rem;
+    margin-top: 5rem;
     text-align: center;
+    font-size: 4rem;
 }
  .nobmre-sitio span {
      color: #037bc0;
  }
+
+ .contenedor-navegacion {
+    border-top: .1rem solid #e1e1e1;
+}
 
  .nav-principal {
      /* border-color: #e1e1e1;
@@ -64,7 +109,7 @@ img {
 
      /* padding-top: 20px;
      padding-bottom: 20px; */   /* Lo mismo con la siguiente línea*/
-     padding: 20px 0;
+     padding: 2rem 0;
      display: flex;
      justify-content: space-between;
  }
@@ -73,7 +118,7 @@ img {
      background-image: url(../img/principal.jpg);
      background-repeat: no-repeat;
      background-size: cover;
-     height: 700px;
+     height: 55rem;
      
  }
 
@@ -84,19 +129,19 @@ img {
 .categoria a {
     text-align: center;
     display: block;
-    padding: 20px;
-    font-size: 20px;
+    padding: 2rem;
+    font-size: 2rem;
 }
 .categoria a:hover {
     background-color: #037bc0;
     color: #FFFFFF;
-    border-bottom-right-radius: 10px;
+    border-bottom-right-radius: 1rem;
 }
  
 .listado-categorias {
     display: grid;
     /* grid-template-columns: 200px 200px 200px 200px; */ /* Ahora escribimos la forma corta */
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 100px 100px;
-    gap: 20px;
+    /* grid-template-rows: 100px 100px; */
+    gap: 2rem;
 }
