--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,21 +55,27 @@ html {
 body {
     font-family: 'Raleway', sans-serif;
     font-size: 1.6rem;
+    line-height: 1.5;
 }
+
 /* Globales */
 h1, h2, h3 {
     font-family: 'Playfair Display', serif;
+    margin: 0 0 5rem 0;
 }
-
+h1 {
+    font-size: 5rem;
+}
+h2 {
+    font-size: 3rem;
+}
 h3 {
     font-family: 3rem;
 }
-
 a {
     text-decoration: none;
     color: #000;
 }
-
 .contenedor {
     max-width: 120rem;
     /* margin-top: 0;
@@ -78,9 +84,7 @@ a {
     margin-left: auto; */
     /* margin: 0 auto; */ /* Lo comentado es igual a lo siguiente */
     margin-inline: auto;
-
 }
-
 img {
     max-width: 100%; /* Esto es relativo al elemento padre, en este caso un div o el mismo body */
     display: block;
@@ -89,9 +93,7 @@ img {
 /* Header y Navegación */
 .nobmre-sitio {
     margin-top: 5rem;
-    margin-top: 5rem;
     text-align: center;
-    font-size: 4rem;
 }
  .nobmre-sitio span {
      color: #037bc0;
@@ -118,11 +120,14 @@ img {
      background-image: url(../img/principal.jpg);
      background-repeat: no-repeat;
      background-size: cover;
+     background-position: center center;
      height: 55rem;
-     
  }
 
  /* Categorias */
+ .categorias {
+     padding-top: 5rem;
+ }
  .categorias h2 {
      text-align: center;
  }
@@ -144,4 +149,23 @@ img {
     grid-template-columns: repeat(3, 1fr);
     /* grid-template-rows: 100px 100px; */
     gap: 2rem;
+}
+
+/* Bloque Nosotros */
+
+.sobre-nosotros {
+    background-image: linear-gradient( to right, transparent 50%, #037bc0 50%, #037bc0 100%), url(../img/nosotros.jpg);
+    background-position: left center;
+    padding: 10rem 0;
+    background-repeat: no-repeat;
+    background-size: 100%, 100rem;
+}
+.sobre-nosotros-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 8rem;
+}
+.texto-nosotros {
+    grid-column: 2 / 3;
+    color: #FFFFFF;
 }
