--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,6 +90,11 @@ img {
     display: block;
 }
 
+/* Utilidades */
+.text-center {
+    text-align: center;
+}
+
 /* Header y Navegación */
 .nobmre-sitio {
     margin-top: 5rem;
@@ -128,10 +133,7 @@ img {
  .categorias {
      padding-top: 5rem;
  }
- .categorias h2 {
-     text-align: center;
- }
-.categoria a {
+ .categoria a {
     text-align: center;
     display: block;
     padding: 2rem;
@@ -168,4 +170,26 @@ img {
 .texto-nosotros {
     grid-column: 2 / 3;
     color: #FFFFFF;
+}
+
+/* Listado de Productos */
+.contenido-principal{
+    padding-top: 5rem;
+}
+.producto {
+    background-color: #037bc0;
+}
+.texto-producto {
+    text-align: center;
+    color: #FFFFFF;
+}
+.texto-producto h3 {
+    margin: 0;
+}
+.texto-producto p {
+    margin: 0 0 .5rem 0;
+}
+.texto-producto .precio {
+    font-size: 2.8rem;
+    font-weight: 900;
 }
