--- a/CSS/style.css
+++ b/CSS/style.css
@@ -189,6 +189,39 @@ img {
 .contenido-principal{
     padding-top: 5rem;
 }
+.listado-productos {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    /* column-gap: 2rem;    // si el espacio entre column como en row es la misma
+    row-gap: 2rem;          // es posible ponerlo en una sola línea para ambos*/       
+    gap: 2rem;
+}
+.producto:nth-child(1) {
+    grid-column-start: 1;
+    grid-column-end: 7;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+.producto:nth-child(1) {
+    height: 43rem;
+    width: 100%;
+    object-fit: cover;
+}
+.producto:nth-child(2) {
+    grid-column: 1 / 4;
+}
+.producto:nth-child(3) {
+    grid-column: 4 / 7;
+}
+.producto:nth-child(4) {
+    grid-column: 1 / 3;
+}
+.producto:nth-child(5) {
+    grid-column: 3 / 5;
+}
+.producto:nth-child(6) {
+    grid-column: 5 / 7;
+}
 .producto {
     background-color: #037bc0;
 }
