--- a/CSS/style.css
+++ b/CSS/style.css
@@ -202,10 +202,10 @@ img {
     display: grid;
     grid-template-columns: 3fr 1fr;
 }
-.producto:nth-child(1) {
+.producto:nth-child(1) img{
     height: 43rem;
     width: 100%;
-    object-fit: cover;
+    object-fit: cover;  /* Super importante para mantener las imágenes en Responsive Design */
 }
 .producto:nth-child(2) {
     grid-column: 1 / 4;
