--- a/CSS/style.css
+++ b/CSS/style.css
@@ -210,9 +210,20 @@ img {
 .producto:nth-child(2) {
     grid-column: 1 / 4;
 }
+.producto:nth-child(2) img,     /* Aquí estamos aplicando los mísmos valores a los dos */
+.producto:nth-child(3) img {
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+}
 .producto:nth-child(3) {
     grid-column: 4 / 7;
 }
+/* .producto:nth-child(3) img {     // Cddigo ahorrado en el anterior bloque.
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+} */
 .producto:nth-child(4) {
     grid-column: 1 / 3;
 }
