--- a/CSS/style.css
+++ b/CSS/style.css
@@ -251,3 +251,22 @@ img {
     font-size: 2.8rem;
     font-weight: 900;
 }
+
+/* Footer */
+.site-footer {
+    border-top: 1px solid #e1e1e1;
+    margin-top: 5rem;
+    padding-top: 5rem;
+}
+/* .grid-footer {
+    display: flex;
+    gap: 2rem;
+}
+.grid-footer div {
+    flex: 1;    // Este 1 hace referencia al factor de crecimiento del elemento //
+} */
+.grid-footer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
