--- a/CSS/style.css
+++ b/CSS/style.css
@@ -258,6 +258,9 @@ img {
     margin-top: 5rem;
     padding-top: 5rem;
 }
+.site-footer h3 {
+    margin-bottom: .5rem;
+}
 /* .grid-footer {
     display: flex;
     gap: 2rem;
@@ -269,4 +272,11 @@ img {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
+}
+.footer-menu a {
+    display: block;
+}
+.copyright {
+    margin-top: 5rem;
+    text-align: center;
 }
